--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,7 @@
 
     <string name="direction_replacement">Near the</string>
     <string name="of">of</string>
+
+    <string name="empty_text">No earthquakes found</string>
+    <string name="no_internet">No internet connection</string>
 </resources>
